tests/sumo/spec/departure/errors/lane_given_disallowed_ignore/errors.sumo.meso
Warning: Unused states in tlLogic 'C', program '0' in phase 0 after tl-index 23
Warning: Vehicle '1' is not allowed to depart on any lane of its first edge.
